fix: sonar warnings [DHIS2-14971]